# pop-launcher-jetbrains-plugin

./: Cargo.toml  README.md  justfile  plugin.ron
src/: config.rs  jetbrains.rs  main.rs
